
syntax = "proto3";

package model;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Tusach {
  rpc GetBooks(google.protobuf.Empty) returns (BookList);
  rpc QueryBooks(google.protobuf.Timestamp) returns (BookList);
  rpc Subscribe(google.protobuf.Empty) returns (stream Book);
  rpc GetBook(BookID) returns (Book);
  rpc CreateBook(NewBookRequest) returns (Book);
  rpc UpdateBook(Book) returns (Book);
  rpc DeleteBook(BookID) returns (google.protobuf.Empty);  
}

message User {
  string name = 1;
  string roles = 2;
}

message SystemInfo {
  google.protobuf.Timestamp system_up_time = 1;
  google.protobuf.Timestamp book_last_updated_time = 2;  
}

enum BookStatusType {
  NONE = 0;
  IN_PROGRESS = 1;
  COMPLETED = 2;
  ERROR = 3;
  ABORTED = 4;
}

message BookID {
  int32 ID = 1;
}

message Book {
  int32 ID = 1;
  BookStatusType status = 2;
  string title = 3;
  string author = 4;
  google.protobuf.Timestamp created_time = 5; // Epoch time in MS
  string created_by = 6;
  int32 build_time_sec = 7;
  string start_page_url = 8;
  string current_page_url = 9;
  int32 current_page_no = 10;
  int32 max_num_pages = 11;
  google.protobuf.Timestamp last_updated_time = 12;
  string error_msg = 13;
  bool epub_created = 14;
  bool deleted = 15;
}

message BookList {
  repeated Book books = 1;
  bool is_full_list = 2;
}

message NewBookRequest {
  string title = 1;
  string start_page_url = 2;
  string author = 3;
  int32 max_num_pages = 4;
}

message Chapter {
  int32 chapter_no = 1;
  int32 book_id = 2;
  string title = 3;
  bytes html = 4;
}