syntax = "proto3";

package model;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "tusach_model.proto";

service Tusach {
  rpc GetBooks(google.protobuf.Empty) returns ( BookList );
  rpc QueryBooks(google.protobuf.Timestamp) returns ( BookList );
  rpc GetSystemInfo(google.protobuf.Empty) returns ( SystemInfo );
  rpc CreateBook(NewBookRequest) returns ( Book );
  rpc UpdateBook(Book) returns ( Book );
  rpc DeleteBook(BookID) returns ( google.protobuf.Empty );
}

